# Structural-Matrix

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
docs/: 01-ARCHITECTURE.md  02-FLOWS.md  03-CONTRACTS.md  04-TYPES.md  05-SCHEMAS.md  06-INTERFACES.md  07-DEPENDENCIES.md  08-MODULES.md  09-DECISION-LOG.md  DEVELOPER_SPEC.md  MEASUREMENT.md  METHODOLOGY.md
loop/: DEVLOG.md  README.md  check.py
src/structural_matrix/: __init__.py  analyzer.py  behaviour.py  classification.py  cli.py  cohesion.py  interfaces.py  mapping.py  motifs.py  pipeline.py  roles.py  serialization.py  significance.py  stability.py  types.py
tests/: conftest.py  test_architecture.py  test_cli.py  test_foundation.py  test_fuzz.py  test_json_safe.py  test_measure.py  test_pipeline.py  test_regime_split.py  test_role_motifs.py  test_scale.py  test_significance.py  test_spec_api.py  test_stability.py  test_windows.py
validation/: RESULTS.md  voynich_validation.py
