[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "structural-matrix"
version = "0.1.0"
description = "A behaviour-first engine for extracting universal structure from symbolic systems."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Structural Matrix" }]
keywords = ["entropy", "symbolic", "structure", "classification", "behaviour"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
structural-matrix = "structural_matrix.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
